# mtm_ex1

./: CMakeLists.txt  README.md  amount_set.h  amount_set_str.c  amount_set_str_main.c  amount_set_str_node.c  amount_set_str_node.h  amount_set_str_test_utilities.h  amount_set_str_tests.c  amount_set_str_tests.h  makefile  matamikya.c  matamikya.h  matamikya_orders.c  matamikya_orders.h  matamikya_orders_set.c  matamikya_orders_set.h  matamikya_print.c  matamikya_print.h  matamikya_product_in_order.c  matamikya_product_in_order.h  matamikya_products.c  matamikya_products.h  matamikya_products_set.c  matamikya_products_set.h  matamikya_validation_check.c  matamikya_validation_check.h
tests/: matamikya_main.c  matamikya_tests.c  matamikya_tests.h
